@@ -1,52 +1,52 @@
 package com.example.ros.Messaging;
 
 import com.example.ros.Dto.RouteRequest;
+import com.example.ros.Service.PackageStatusService;
 import com.example.ros.Service.RouteService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.amqp.rabbit.annotation.RabbitListener;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 @Service
 public class CmsOrderConsumer {
 
     private final RouteService routeService;
-    private final ObjectMapper objectMapper;
+    private final PackageStatusService packageStatusService;
+    private final ObjectMapper objectMapper = new ObjectMapper();
 
-    public CmsOrderConsumer(RouteService routeService) {
+    public CmsOrderConsumer(RouteService routeService, PackageStatusService packageStatusService) {
         this.routeService = routeService;
-        this.objectMapper = new ObjectMapper();
+        this.packageStatusService = packageStatusService;
     }
 
-    // Use the rawRabbitListenerContainerFactory to avoid class resolution errors
-    @RabbitListener(
-            queues = "order.created",
-            containerFactory = "rawRabbitListenerContainerFactory" // <-- use raw container
-    )
+    @RabbitListener(queues = "order.created", containerFactory = "rawRabbitListenerContainerFactory")
     public void handleOrderCreated(byte[] payload) {
         try {
             Map<String, Object> event = objectMapper.readValue(payload, Map.class);
             System.out.println("✅ Received CMS OrderCreatedEvent: " + event);
 
-            RouteRequest request = new RouteRequest();
-            request.setOrderId((String) event.getOrDefault("orderId", "unknown"));
-            request.setDriverId("driver123");
-
+            String orderId = (String) event.getOrDefault("orderId", "unknown");
             Object items = event.get("items");
-            if (items != null && !items.toString().isEmpty()) {
-                request.setAddresses(Arrays.asList(items.toString().split(",")));
+            List<String> itemList = items != null ? Arrays.asList(items.toString().split(",")) : List.of();
+
+            // Generate package IDs that match WMS format: orderId + "-PKG" + (index + 1)
+            List<String> packageIds = new ArrayList<>();
+            for (int i = 0; i < itemList.size(); i++) {
+                packageIds.add(orderId + "-PKG" + (i + 1));
             }
 
-            routeService.optimizeRoute(request)
-                    .thenAccept(response -> System.out.println("Optimized route -> " + response.getRoute()));
+            packageStatusService.registerPackages(orderId, packageIds);
+
+            System.out.println("📋 Registered packages for tracking: " + packageIds);
 
         } catch (Exception e) {
             System.err.println("❌ Failed to process OrderCreatedEvent: " + e.getMessage());
             e.printStackTrace();
         }
     }
-
 }
